<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LauncherActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow"
            android:background="?android:attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apex_settings"
            android:textSize="32sp"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- 添加ScrollView解决内容过长问题 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 第一行设置项 -->
            <LinearLayout
                android:id="@+id/display_setting_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cfd_display"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/display_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:track="@drawable/switch_custom_track_selector"
                    android:thumb="@drawable/switch_custom_thumb_selector"
                    tools:ignore="UseSwitchCompatOrMaterialXml"
                    android:layout_gravity="center_vertical"/>
<!--                    style="@style/CustomSwitchStyle"-->


            </LinearLayout>

            <LinearLayout
                android:id="@+id/touch_setting_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cfd_touch"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allows_touch_input_on_the_cfd"
                        android:textColor="#808080"
                        android:textSize="12sp" />

                </LinearLayout>


                <Switch
                    android:id="@+id/touch_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:track="@drawable/switch_custom_track_selector"
                    android:thumb="@drawable/switch_custom_thumb_selector"
                    android:layout_gravity="center_vertical"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <!-- Touch设置项说明文字 -->


            <!-- 亮度调节项 -->
            <LinearLayout
                android:id="@+id/brightness_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cfd_backlight"
                    android:textSize="20sp"
                    android:padding="8dp"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingTop="16dp"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_brightness_half"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <SeekBar
                            android:id="@+id/brightness_seekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:splitTrack="false"
                            android:thumbOffset="0dp"
                            android:outlineSpotShadowColor="@color/thumb_select"/>
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_brightness"
                        android:layout_marginEnd="8dp" />

                </LinearLayout>

            </LinearLayout>
<!--            <LinearLayout-->
<!--                android:id="@+id/independent_cfd_display_setting_row"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:paddingStart="24dp"-->
<!--                android:paddingEnd="16dp"-->
<!--                android:paddingTop="16dp"-->
<!--                android:paddingBottom="16dp"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:background="?android:attr/selectableItemBackground">-->

<!--                <TextView-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/independent_cfd_display"-->
<!--                    android:textSize="20sp" />-->

<!--                <Switch-->
<!--                    android:id="@+id/independent_cfd_display_switch"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:focusable="false"-->
<!--                    android:clickable="false"-->
<!--                    android:track="@drawable/switch_custom_track_selector"-->
<!--                    android:thumb="@drawable/switch_custom_thumb_selector"-->
<!--                    tools:ignore="UseSwitchCompatOrMaterialXml"-->
<!--                    android:layout_gravity="center_vertical"/>-->
<!--                &lt;!&ndash;                    style="@style/CustomSwitchStyle"&ndash;&gt;-->


<!--            </LinearLayout>-->

            <!-- NFC设置项 -->
            <LinearLayout
                android:id="@+id/nfc_setting_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/nfc_setting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nfc_settings"
                        android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
